simplify controller
